# AAIT_ASSIGNMENT3

./: .gitignore  README.md  bonus_1.py  pyproject.toml
configs/: config.yaml  editing_config.yaml
docs/: IMPLEMENTATION_LOG.md  Task2_1_Feature_Amplification_Explained.md
latex_submission/: main.tex
outputs/: bonus_1_results.json
outputs/editing/feature_amplification/: dimension_info.json
outputs/experiments/feature_amplification/analysis/: summary_report.json  summary_report.md
outputs/experiments/feature_amplification/exp1_attribute_correlation/: correlation_matrix.npy  correlation_report.json
outputs/experiments/feature_amplification/exp2_wider_alpha/: experiment_summary.json
outputs/experiments/feature_amplification/exp3_manual_exploration/: dimension_ranking.json  selection_template.md
scripts/: evaluate.sh  run_editing.py  run_editing.sh  train.sh  train_classifier.py  train_classifier.sh
scripts/experiments/: run_feature_amplification_experiments.py  run_identity_transfer_improved.py
src/: __init__.py  train.py
src/data/: __init__.py  celeba.py  celeba_with_attributes.py
src/editing/: __init__.py  classifier.py  feature_amplification.py  identity_transfer.py  label_guidance.py
src/editing/experiments/: __init__.py  alpha_range.py  attribute_correlation.py  dimension_explorer.py  identity_utils.py
src/losses/: __init__.py  kl_divergence.py  perceptual.py  reconstruction.py
src/models/: __init__.py  blocks.py  decoder.py  encoder.py  vae.py
src/utils/: __init__.py  kl_annealing.py  metrics.py  visualization.py
(+2 files in other folders)
